# chat-codebase

./: .gitignore  OPTIMIZATION_SUMMARY_2024.md  README.md  SEMANTIC_CHUNKING_OPTIMIZATION_REPORT.md  SPLITTER_OPTIMIZATION_ENHANCED.md  SPLITTER_OPTIMIZATION_SUMMARY.md  app.py  embedding_model.py  langauge_parser.py  llm_model.py  main.py  pyproject.toml  repository.py  requirements.txt  run_rag.py  run_simple_test.py  splitter.py  分片逻辑优化完成总结.md  语言特定分片器开发完成总结.md  语言特定分片器系统说明.md
config/: settings.py
docs/: PROJECT_STRUCTURE.md
scripts/: cleanup.sh  run_tests.sh
src/: agent.py  application.py  main.py  rag.py
src/config/: __init__.py  parser_config.py  settings.py  tree_sitter_config.py
src/data/: __init__.py  code_splitter.py  continuous_semantic_splitter.py  default_splitter.py  enhanced_models.py  enhanced_semantic_splitter.py  language_specific_splitters.py  models.py  rag_optimized_splitter.py  repository.py  semantic_splitter.py  splitter.py  truly_continuous_splitter.py
src/model/: __init__.py  embedding.py  llm.py  reranker.py
src/tools/: __init__.py  base.py  codebase_search.py  find_by_name.py  grep_search.py  list_dir.py  related_files.py  view_code_item.py  view_file.py
src/utils/: file_utils.py  logging_utils.py
tests/: README.md  conftest.py  test_language_specific_splitters.py  test_splitter_optimizations.py
tests/debug/: __init__.py
tests/demos/: __init__.py
tests/integration/semantic_chunking/: __init__.py
tests/tools/: test_view_code_item.py
tests/unit/: test_comment_association.py  test_semantic_optimization.py
tests/unit/data/: __init__.py
tests/unit/data/splitters/: __init__.py
