[project]
name = "code-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.65.2",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.13.2",
    "semantic-text-splitter>=0.24.1",
    "transformers>=4.49.0",
    "tree-sitter==0.21.3",
    "tree-sitter-languages>=1.10.2",
]
