[project]
name = "code-agent"
version = "0.1.0"
description = "An agent-based system for code repository management and analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Code Agent Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "qdrant-client",
    "python-dotenv",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "langchain>=0.0.300",
    "tiktoken",
    "numpy",
    "tqdm",
    "tenacity",
    "rich",
    "typer[all]",
    "tree-sitter>=0.21.0",
    "sentence-transformers",
    "tree-sitter-languages>=1.10.2",
    "pytest>=8.3.5",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[project.scripts]
code-agent = "src.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]

[tool.uv]
package = true
